--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,5 @@
     "source.fixAll.tslint": "explicit",
     "source.organizeImports": "never"
   },
-  "svg.preview.background": "editor"
+  "tailwindCSS.classAttributes": ["class", "className", "\\b\\w+ClassName\\b"],
 }
