chore: add supabase

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+NEXT_PUBLIC_SUPABASE_URL = LINK
+NEXT_PUBLIC_SUPABASE_ANON_KEY = SECRET_KEY 
+
 NEXT_PUBLIC_EMAILJS_SERVICE_ID = SECRET_KEY
 NEXT_PUBLIC_EMAILJS_TEMPLATE_ID = SECRET_KEY
 NEXT_PUBLIC_EMAILJS_PUBLIC_KEY = SECRET_KEY
