--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
     "@icons-pack/react-simple-icons": "^9.4.0",
+    "@supabase/supabase-js": "^2.42.0",
     "boxicons": "^2.1.4",
     "clsx": "^2.1.0",
     "framer-motion": "^10.13.0",
