--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,5 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY = SECRET_KEY
 NEXT_PUBLIC_EMAILJS_SERVICE_ID = SECRET_KEY
 NEXT_PUBLIC_EMAILJS_TEMPLATE_ID = SECRET_KEY
 NEXT_PUBLIC_EMAILJS_PUBLIC_KEY = SECRET_KEY
+
+GA_MEASUREMENT_ID = SECRET_KEY
