feat: add google analytics

--- a/.env.example
+++ b/.env.example
@@ -7,4 +7,4 @@ NEXT_PUBLIC_EMAILJS_SERVICE_ID = SECRET_KEY
 NEXT_PUBLIC_EMAILJS_TEMPLATE_ID = SECRET_KEY
 NEXT_PUBLIC_EMAILJS_PUBLIC_KEY = SECRET_KEY
 
-GA_MEASUREMENT_ID = SECRET_KEY
+NEXT_PUBLIC_GA_MEASUREMENT_ID = SECRET_KEY
